added new stuff

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Ghana must Go</title>
@@ -313,7 +309,7 @@
 								<section class="logo">
 									<h2>Follow me on ...</h2>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.instagram.com/ghana.must_go?r=nametag" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										
 									</ul>
 									<img src="download.png" >  +233 54 739 8548
@@ -325,7 +321,7 @@
                                 <footer>
 								<section>
 									<h2>Contact For Booking</h2>
-									<form  name="contact" method="post" data-netlify="true">
+									<form  action="POST" data-netlify="true">
 										<div class="fields">
 											<div class="field half">
 												<input type="text" name="name" id="name" placeholder="Name" />
