--- a/index.html
+++ b/index.html
@@ -290,6 +290,47 @@
 							<h2>Melanin under Sun</h2>
 							<p></p>
 						</article>
+
+						<article class="thumb">
+							<a href="melanin1.jpg" class="image"><img src="melanin1.jpg" alt="" /></a>
+							<h2>Melanin under Sun</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="melanin2.jpg" class="image"><img src="melanin2.jpg" alt="" /></a>
+							<h2>Melanin under Sun</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="melanin3.jpg" class="image"><img src="melanin3.jpg" alt="" /></a>
+							<h2>Melanin under Sun</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="melanin4.jpg" class="image"><img src="melanin4.jpg" alt="" /></a>
+							<h2>Melanin under Sun</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="melanin5.jpg" class="image"><img src="melanin5.jpg" alt="" /></a>
+							<h2>Melanin under Sun</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="melanin6.jpg"class="image"><img src="melanin6.jpg" alt="" /></a>
+							<h2>Melanin under Sun</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="melanin7.jpg"class="image"><img src="melanin7.jpg" alt="" /></a>
+							<h2>Melanin under Sun</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="melanin8.jpg" class="image"><img src="melanin8.jpg" alt="" /></a>
+							<h2>Melanin under Sun</h2>
+							<p></p>
+						</article>
 					</div>
 				<!-- Footer -->
 				
