--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 										</ul>
 									</form>
 										<p class="copyright">
-									copywrite @GMG 
+									copywrite @GMG 2021
 								</p>
 				
 								</section>
